--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@apollo/server": "^4.9.5",
     "@nestjs/apollo": "^12.0.10",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^12.0.10",
     "@nestjs/platform-express": "^9.0.0",
