--- a/package.json
+++ b/package.json
@@ -61,10 +61,19 @@
     "typescript": "^4.7.4"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ],
+    "roots": [
+      "<rootDir>"
     ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
